Commit 2 (after refactoring)